--- a/README
+++ b/README
@@ -1,1 +1,1 @@
-Go to Windows->Preferences->Java->Editor->Templates and import the templates
+Go to Windows->Preferences->Java->Editor->Templates and import the template file
